Compiler/tests/good/Variables/01_variables.rs
fn main(){
    let x = 6;
    let y:i8 = 12 + x;
}