Compiler/tests/bad/Variables/09_variable.rs
struct Point2D
{
    x:i32,
    y:bool
}

fn main(){
    let x : Point2D = false;
}
